change to old java api toList